<resources>
    <string name="app_name">TUGAS</string>
    <string name="labelapp">PENDAFTARAN</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="islam">Islam</string>
    <string name="katolik">Katolik</string>
    <string name="kristen">Kristen</string>
    <string name="budha">Budha</string>
    <string name="hindu">Hindu</string>
    <string name="konghucu">Konghucu</string>
    <string name="aliran_kepercayaan">Aliran Kepercayaan</string>
    <string name="telepon">Telpon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password Kembali</string>
    <string name="kembali">KEMBALI</string>
    <string name="daftar">DAFTAR</string>
    <string name="date_picker">datePicker</string>
</resources>
