<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/labelapp"
        android:textAlignment="center"
        android:textColor="@color/judul"
        android:textSize="30sp"
        android:textStyle="italic"
        android:typeface="monospace"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/namadepan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nama_depan"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />
            <EditText
                android:id="@+id/namabelakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nama_belakang"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/tempatlahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tempat_lahir"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/tanggallahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tanggal_lahir"
                android:inputType="datetime"
                android:textColor="@color/colorAccent" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/Alamat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/alamat"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jenis_kelamin"
        android:textColor="@color/judul"
        android:textSize="15sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan"
                android:ems="10"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textview5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/agama"
        android:textColor="@color/judul"
        android:textSize="15sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/islam"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kristen"
                android:ems="10"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/katolik"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindu"
                android:ems="10"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budha"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/konghucu"
                android:ems="10"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aliran_kepercayaan"
                android:ems="10"/>
        </TableRow>
    </TableLayout>

        <EditText
            android:id="@+id/tlp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/telepon"
            android:inputType="phone"
            android:textColor="@color/colorAccent" />
        <EditText
            android:id="@+id/eml"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent" />
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />
        <EditText
            android:id="@+id/masukan"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/kembali"
                        android:layout_width="170dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="0dp"
                        android:background="@color/btn"
                        android:text="@string/kembali" />

                    <Button
                        android:id="@+id/daftar"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="0dp"
                        android:background="@color/btn"
                        android:text="@string/daftar" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>